# SparkSearch

./: CLAUDE.md  Cargo.toml  README.md  shortcuts.conf
src/: actions.rs  bookmarks.rs  branding.rs  history.rs  hotkey.rs  icons.rs  index.rs  main.rs  search.rs  shortcuts.rs  theme.rs  tray.rs
