[package]
name = "spark-run"
version = "0.1.0"
edition = "2021"
description = "A tiny Windows Power Run style launcher proof of concept."

[dependencies]
eframe = "0.27"
image = "0.24"
raw-window-handle = "0.6"
ureq = { version = "2", default-features = false, features = ["tls"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com_Urlmon",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }
